# hasmartyzappedtoday

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md  flake.nix  index.html  justfile  package-lock.json  tailwind.config.js
assets/: beinglazy.css  main.css
migrations/: 20240724143827_add_zaps_table.down.sql  20240724143827_add_zaps_table.up.sql
src/: db.rs  main.rs  nostr.rs  server.rs
